# EvolutionaryOptimizationAlgorithms

./: lab_3.py  main.py  pyproject.toml  shuffled_frog_leaping_algorithm.py  simple_gen_alg.py
